--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	background: linear-gradient(
+		120deg,
+		#e2c35d,
+		#d88771
+	);
+	color: white;
+	font-family: "Poppins", sans-serif;
+	min-height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+	font-size: 1.5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header,
+form {
+	min-height: 20vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
+form input,
+form button {
+	padding: 0.5rem;
+	font-size: 2rem;
+	border: none;
+	background-color: white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form button {
+	color: #d88771;
+	background-color: white;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+form button:hover {
+	background-color: #d88771;
+	color: white;
+}
+.todo-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.todo-list {
+	min-width: 30%;
+	list-style: none;
+}
+.todo {
+	margin: 0.5rem;
+	background-color: white;
+	color: black;
+	font-size: 1.5rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	transition: all 0.5s ease;
+}
+.todo li {
+	flex: 1;
+}
+.trash-btn,
+.complete-btn {
+	background-color: #ff6f47;
+	color: white;
+	border: none;
+	padding: 1rem;
+	cursor: pointer;
+	font-size: 1rem;
+}
+.complete-btn {
+	background-color: rgb(73, 204, 73);
+}
+.todo-item {
+	padding: 0rem 0.5rem;
+}
+.fa-trash,
+.fa-check {
+	pointer-events: none;
+}
+.completed {
+	text-decoration: line-through;
+	opacity: 0.5;
+}
+.fall {
+	transform: translateY(8rem)
+		rotateZ(20deg);
+	opacity: 0;
+}
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	outline: none;
+	box-shadow: none;
+	border: none;
+}
+.select {
+	margin: 1rem;
+	position: relative;
+	overflow: hidden;
+}
+select {
+	color: #ff6f47;
+	width: 10rem;
+	cursor: pointer;
+	padding: 1rem;
+}
+.select::after {
+	content: "\25BC";
+	position: absolute;
+	color: #ff6f47;
+	background-color: white;
+	top: 0;
+	right: 0;
+	padding: 1rem;
+	pointer-events: none;
+	transition: all ease 0.3s;
+}
+.select:hover::after {
+	background-color: #ff6f47;
+	color: white;
 }
